--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@tsconfig/node16": "^1.0.2",
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^17.0.21",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
+    "axios": "^1.6.3",
+    "dotenv": "^16.3.1",
     "eslint": "^8.10.0",
     "prettier": "^2.5.1",
     "ts-node-dev": "^1.1.8",
@@ -30,8 +33,8 @@
     }
   },
   "dependencies": {
-    "axios": "^1.6.3",
-    "dotenv": "^16.3.1",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.3"
   }
 }
