--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tsconfig/node16": "^1.0.2",
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.13",
+    "@types/faker": "^6.6.9",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^17.0.21",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
@@ -33,6 +34,8 @@
     }
   },
   "dependencies": {
+    "@faker-js/faker": "^8.3.1",
+    "body-parser": "^1.20.2",
     "express": "^4.17.3",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3"
