--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@faker-js/faker": "^8.3.1",
     "body-parser": "^1.20.2",
     "express": "^4.17.3",
+    "form-data": "^4.0.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3"
   }
