--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.13",
     "@types/faker": "^6.6.9",
+    "@types/jest": "^29.5.11",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^17.0.21",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
@@ -24,6 +25,7 @@
     "dotenv": "^16.3.1",
     "eslint": "^8.10.0",
     "prettier": "^2.5.1",
+    "ts-jest": "^29.1.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
   },
@@ -38,6 +40,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.17.3",
     "form-data": "^4.0.0",
+    "jest": "^29.7.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3"
   }
