--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@faker-js/faker": "^8.3.1",
     "body-parser": "^1.20.2",
     "express": "^4.17.3",
+    "file-type": "^18.7.0",
     "form-data": "^4.0.0",
     "jest": "^29.7.0",
     "mongodb": "^6.3.0",
