--- a/.eslintrc
+++ b/.eslintrc
@@ -1,16 +1,7 @@
 {
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module" // Allows for the use of imports
-  },
-  "extends": ["plugin:@typescript-eslint/recommended"],
-  "env": {
-    "node": true // Enable Node.js global variables
-  },
+  "extends": ["prettier"],
+  "plugins": ["prettier"],
   "rules": {
-    "no-console": "off",
-    "import/prefer-default-export": "off",
-    "@typescript-eslint/no-unused-vars": "warn"
+    "prettier/prettier": ["error"]
   }
 }
