--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "axios": "^1.6.3",
     "dotenv": "^16.3.1",
     "eslint": "^8.10.0",
-    "prettier": "^2.5.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.2",
+    "prettier": "^3.1.1",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
