--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,5 +16,8 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "max-len": [2, {"code": 80, "ignorePattern": "^import\\W.*"}],
+        "no-console": "error"
+
     }
 }
