--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "eslint": "^8.10.0",
     "prettier": "^3.1.1",
     "ts-jest": "^29.1.1",
-    "ts-node-dev": "^1.1.8",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.5.5"
   },
   "husky": {
@@ -43,6 +43,7 @@
     "form-data": "^4.0.0",
     "jest": "^29.7.0",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "ts-node": "^10.9.2"
   }
 }
