--- a/package.json
+++ b/package.json
@@ -11,6 +11,17 @@
     "format": "eslint src/**/*.ts --fix",
     "pretty": "prettier --write \"src/**/*.ts\""
   },
+  "dependencies": {
+    "@faker-js/faker": "^8.3.1",
+    "axios": "^1.6.3",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
+    "express": "^4.17.3",
+    "file-type": "^18.7.0",
+    "form-data": "^4.0.0",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.3"
+  },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.2",
     "@types/body-parser": "^1.19.2",
@@ -21,29 +32,18 @@
     "@types/node": "^17.0.21",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
-    "axios": "^1.6.3",
-    "dotenv": "^16.3.1",
     "eslint": "^8.10.0",
+    "jest": "^29.7.0",
     "prettier": "^3.1.1",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "ts-node": "^10.9.2"
   },
   "husky": {
     "hooks": {
       "pre-commit": "yarn lint",
       "pre-push": "yarn test"
     }
-  },
-  "dependencies": {
-    "@faker-js/faker": "^8.3.1",
-    "body-parser": "^1.20.2",
-    "express": "^4.17.3",
-    "file-type": "^18.7.0",
-    "form-data": "^4.0.0",
-    "jest": "^29.7.0",
-    "mongodb": "^6.3.0",
-    "mongoose": "^8.0.3",
-    "ts-node": "^10.9.2"
   }
 }
