--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "jest": "^29.7.0",
     "prettier": "^3.1.1",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.5.5",
-    "ts-node": "^10.9.2"
+    "typescript": "^4.5.5"
   },
   "husky": {
     "hooks": {
