--- a/package.json
+++ b/package.json
@@ -13,14 +13,22 @@
   },
   "dependencies": {
     "@faker-js/faker": "^8.3.1",
+    "@types/exif": "^0.6.5",
+    "@types/imagemagick": "^0.0.35",
     "axios": "^1.6.3",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
+    "exif": "^0.6.0",
+    "exif-js": "^2.3.0",
+    "exif-reader": "^2.0.0",
+    "exifreader": "^4.20.0",
     "express": "^4.17.3",
     "file-type": "^18.7.0",
     "form-data": "^4.0.0",
+    "imagemagick": "^0.1.3",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "sharp": "^0.33.1"
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.2",
