--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "tsc",
     "lint": "eslint src/**/*.ts",
     "format": "eslint src/**/*.ts --fix",
-    "pretty": "prettier --write \"src/**/*.ts\""
+    "test": "yarn jest",
+    "pretty": "prettier --write \"src/**/*.ts\"",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@faker-js/faker": "^8.3.1",
@@ -24,21 +26,17 @@
   "devDependencies": {
     "@tsconfig/node16": "^1.0.2",
     "@types/express": "^4.17.13",
+    "@types/jest": "^29.5.11",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^17.0.21",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
     "eslint": "^8.10.0",
+    "husky": "^8.0.0",
     "jest": "^29.7.0",
     "prettier": "^3.1.1",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.5.5"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn lint",
-      "pre-push": "yarn test"
-    }
   }
 }
